# openclawanywhere

./: .gitignore  CONTRIBUTING.md  README.md  README_EN.md  package-lock.json  package.json  run.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: product.md  技术文档.md
public/: desktop.html  index.html
scripts/: build-sidecar.sh  generate-icons.mjs
src/: agentRunner.js  gateway.js  tunnelManager.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar.rs
